--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 h1{
-  color: red;
+  color: rgb(241, 237, 237);
   font-size: 40px;
+  text-align: center;
+  font-size: 50px;
+  font-family: 'Courier New', Courier, monospace;
+  background-color: brown;
+
 }
