--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
-h1{
-  color: rgb(241, 237, 237);
-  font-size: 40px;
-  text-align: center;
-  font-size: 50px;
-  font-family: 'Courier New', Courier, monospace;
-  background-color: brown;
+*{
+  margin: 0;
+  padding: 0;
+}
+.continer{
+  background-image: url("img/bg.jpg");
+  height: 100vh;
+  background-position: bottom;
+  background-size: cover;
+}
 
+.continer h1{
+  color: rgb(255, 94, 0);
+  font-size: 100px;
+  font-family: 'Courier New';
+  text-align: center;  
+  padding-top: 50px;
+  word-spacing: 40px;
+  letter-spacing: 40px;
 }
