--- a/style.css
+++ b/style.css
@@ -1,20 +1,45 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,700&display=swap");
+* {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
-.continer{
+.continer {
   background-image: url("img/bg.jpg");
   height: 100vh;
   background-position: bottom;
   background-size: cover;
 }
 
-.continer h1{
+.continer h1 {
   color: rgb(255, 94, 0);
   font-size: 100px;
-  font-family: 'Courier New';
-  text-align: center;  
+  font-family: "Courier New";
+  text-align: center;
   padding-top: 50px;
   word-spacing: 40px;
   letter-spacing: 40px;
+}
+.aritical{
+  width: 80%;
+  margin: 100px auto;
+  text-align: justify;
+  background-color: aqua;
+  padding: 60px;
+  border: 15px solid red ;
+}
+.aritical h1{
+  text-align: center;
+  font-size: 40px;
+  border-bottom: 10px solid red;
+  padding-bottom: 30px;
+  margin-bottom: 50px;
+}
+.aritical p .imp{
+  font-size: 2em;
+  background-color: yellow;
+}
+.aritical p{
+  font-size: 28px;
+  line-height: 2em;
 }
