--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   word-spacing: 40px;
   letter-spacing: 40px;
 }
-.aritical{
+.aritical, #cowtype{
   width: 80%;
   margin: 100px auto;
   text-align: justify;
