--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
   font-family: 'Roboto', sans-serif;
 }
 .continer {
-  background-image: url("img/bg.jpg");
+  background-image: url("https://images.unsplash.com/photo-1595664652035-0956d50e0311?q=80&w=1560&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   height: 100vh;
   background-position: bottom;
   background-size: cover;
+  clip-path: polygon(50% 0%, 100% 0, 100% 75%, 50% 100%, 0% 75%, 0 0);
 }
 
-.continer h1 {
+.continer h1{
   color: rgb(255, 94, 0);
   font-size: 100px;
   font-family: "Courier New";
@@ -24,11 +25,12 @@
   width: 80%;
   margin: 100px auto;
   text-align: justify;
-  background-color: aqua;
+  /* background-color: aqua; */
   padding: 60px;
-  border: 15px solid red ;
+  /* border: 15px solid red ; */
+  background: linear-gradient(45deg,rgb(255, 192, 192), rgba(0, 0, 255, 0.774));
 }
-.aritical h1{
+.aritical h1, #cowtype h2{
   text-align: center;
   font-size: 40px;
   border-bottom: 10px solid red;
@@ -42,4 +44,20 @@
 .aritical p{
   font-size: 28px;
   line-height: 2em;
+}
+
+.cow-imgs {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.cow-imgs div{
+  min-width: 300px;
+}
+
+.cow-imgs img{
+  width: 100%;
 }
