--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   /* background-color: aqua; */
   padding: 60px;
   /* border: 15px solid red ; */
-  background: linear-gradient(45deg,rgb(255, 192, 192), rgba(0, 0, 255, 0.774));
+  background: linear-gradient(45deg,rgb(255, 192, 192), rgba(0, 0, 255, 0.774), red, green, yellow);
 }
 .aritical h1, #cowtype h2{
   text-align: center;
@@ -50,7 +50,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: space-around;
 }
 
